// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConformerGenerator should generate conformers 1`] = `
"
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
   -1.4023   -1.7420    5.2037 C   0  0  0  0  0  0  0  0  0  0  0  0
   -0.3608   -1.1727    4.4711 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.1032    0.0932    4.9457 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2275    0.6140    4.0808 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.7501    0.9730    2.7964 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.7087    1.4629    1.9283 N   0  0  0  0  0  0  0  0  0  0  0  0
   -2.1098   -1.1008    5.4198 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.0909   -2.1606    6.0367 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.7854   -2.4604    4.6283 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.6316    0.7507    4.9839 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.4208   -0.0415    5.8810 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.6997    1.3387    4.5418 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.9202   -0.1290    3.9610 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.4667    0.9938    1.9511 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.3961    1.4277    1.1065 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;

exports[`ConformerGenerator should generate conformers 2`] = `
"
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    0.3665   -2.2797    4.9083 C   0  0  0  0  0  0  0  0  0  0  0  0
   -0.3608   -1.1727    4.4711 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.1032    0.0932    4.9457 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2275    0.6140    4.0808 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.6863    1.8685    4.5523 O   0  0  0  0  0  0  0  0  0  0  0  0
    2.4449    1.8209    5.7076 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.5661   -2.2491    5.8663 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.2084   -2.3952    4.4144 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.2042   -3.0762    4.7249 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.6316    0.7507    4.9839 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.4208   -0.0415    5.8810 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.9347   -0.0604    4.0047 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.8750    0.7468    3.1297 H   0  0  0  0  0  0  0  0  0  0  0  0
    3.0423    1.1589    5.7010 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.8848    2.5783    5.7931 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;
